Fix HTML entity encoding in app title

--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@ input[type="text"]::placeholder { color: #6a6a80; }
 <body>
 <header id="app-header">
   <div class="header-top">
-    <div class="app-title">Spell Tome <span id="edition-label">D&amp;D 5e &middot; 2014</span></div>
+    <div class="app-title">Spell Tome <span id="edition-label">D&D 5e &middot; 2014</span></div>
     <div class="edition-toggle" id="edition-toggle" title="Switch edition">
       <button class="edition-btn active" id="btn-2014" onclick="setEdition('2014')">2014</button>
       <button class="edition-btn" id="btn-2024" onclick="setEdition('2024')">2024</button>
