--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@ body::before {
       <svg class="ni" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polygon points="6 3 18 3 22 9 12 22 2 9"/><line x1="2" y1="9" x2="22" y2="9"/><line x1="12" y1="3" x2="6" y2="9"/><line x1="12" y1="3" x2="18" y2="9"/></svg>
       &nbsp;Magic Item Compendium
     </a>
+    <a href="combat-tracker.html" class="nav-item">
+      <svg class="ni" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><polyline points="14.5 17.5 3 6 3 3 6 3 17.5 14.5"/><line x1="13" y1="19" x2="19" y2="13"/><line x1="16" y1="16" x2="20" y2="20"/><line x1="19" y1="21" x2="21" y2="19"/><polyline points="14.5 6.5 18 3 21 3 21 6 17.5 9.5"/><line x1="5" y1="14" x2="9" y2="18"/><line x1="7" y1="17" x2="3" y2="21"/><line x1="3" y1="19" x2="5" y2="21"/></svg>
+      &nbsp;Combat Tracker
+    </a>
   </div>
 </nav>
 
@@ -457,6 +461,36 @@ body::before {
               <span class="c-pill" style="color:#8a6a0a;border:1px solid rgba(138,106,10,0.3);background:rgba(138,106,10,0.08);">6 Rarities</span>
               <span class="c-pill" style="color:#8a6a0a;border:1px solid rgba(138,106,10,0.3);background:rgba(138,106,10,0.08);">Attunement Filter</span>
               <span class="c-pill" style="color:#8a6a0a;border:1px solid rgba(138,106,10,0.3);background:rgba(138,106,10,0.08);">Loot Handout</span>
+            </div>
+            <div class="card-foot">Open tool <span class="c-arrow">&#x2192;</span></div>
+          </div>
+        </a>
+
+        <!-- COMBAT TRACKER -->
+        <a href="combat-tracker.html" class="tool-card" style="--accent:#c0392b;">
+          <div class="card-stripe"></div>
+          <div class="card-inner">
+            <div class="card-top">
+              <div class="card-glyph" style="color:#c0392b;">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+                  <polyline points="14.5 17.5 3 6 3 3 6 3 17.5 14.5"/>
+                  <line x1="13" y1="19" x2="19" y2="13"/>
+                  <line x1="16" y1="16" x2="20" y2="20"/>
+                  <line x1="19" y1="21" x2="21" y2="19"/>
+                  <polyline points="14.5 6.5 18 3 21 3 21 6 17.5 9.5"/>
+                  <line x1="5" y1="14" x2="9" y2="18"/>
+                  <line x1="7" y1="17" x2="3" y2="21"/>
+                  <line x1="3" y1="19" x2="5" y2="21"/>
+                </svg>
+              </div>
+              <span class="card-name">Combat Tracker</span>
+            </div>
+            <p class="card-desc">Run combat at the table with initiative order, HP tracking, death saves, and condition management. Setup phase collapses into a clean combat view optimised for mobile play.</p>
+            <div class="card-pills">
+              <span class="c-pill" style="color:#c0392b;border:1px solid rgba(192,57,43,0.3);background:rgba(192,57,43,0.08);">Initiative Order</span>
+              <span class="c-pill" style="color:#c0392b;border:1px solid rgba(192,57,43,0.3);background:rgba(192,57,43,0.08);">Death Saves</span>
+              <span class="c-pill" style="color:#c0392b;border:1px solid rgba(192,57,43,0.3);background:rgba(192,57,43,0.08);">HP Tracking</span>
+              <span class="c-pill" style="color:#c0392b;border:1px solid rgba(192,57,43,0.3);background:rgba(192,57,43,0.08);">Saved Party</span>
             </div>
             <div class="card-foot">Open tool <span class="c-arrow">&#x2192;</span></div>
           </div>
