--- a/monsters.html
+++ b/monsters.html
@@ -235,7 +235,36 @@ input[type="text"]::placeholder { color: #6a6a80; }
 
 .btn { font-family: 'Cinzel', serif; font-size: 0.75rem; font-weight: 600; letter-spacing: 0.08em; text-transform: uppercase; border: none; border-radius: 4px; padding: 7px 16px; cursor: pointer; transition: all 0.15s ease; }
 .btn-print { background: linear-gradient(135deg, #c9a84c, #8a6a2c); color: #1a1a2e; font-weight: 700; box-shadow: 0 2px 12px rgba(201,168,76,0.3); }
-.btn-print:hover { transform: translateY(-1px); box-shadow: 0 4px 16px rgba(201,168,76,0.5); }
+.btn-print:hover:not(:disabled) { transform: translateY(-1px); box-shadow: 0 4px 16px rgba(201,168,76,0.5); }
+.btn-print:disabled { opacity: 0.4; cursor: not-allowed; }
+.btn-ghost { font-family: 'Cinzel', serif; font-size: 0.7rem; font-weight: 600; letter-spacing: 0.06em; text-transform: uppercase; border: 1px solid var(--border); border-radius: 4px; padding: 5px 12px; cursor: pointer; background: transparent; color: var(--text-muted); transition: all 0.15s; white-space: nowrap; }
+.btn-ghost:hover:not(:disabled) { color: var(--gold); border-color: rgba(201,168,76,0.5); }
+.btn-ghost:disabled { opacity: 0.35; cursor: not-allowed; }
+.selection-badge { font-family: 'Cinzel', serif; font-size: 0.65rem; font-weight: 700; letter-spacing: 0.07em; color: var(--gold); background: rgba(201,168,76,0.12); border: 1px solid rgba(201,168,76,0.3); border-radius: 4px; padding: 4px 10px; white-space: nowrap; }
+.mon-card.selected { outline: 2px solid var(--gold); outline-offset: 2px; box-shadow: 0 0 0 4px rgba(201,168,76,0.18), 0 10px 36px rgba(0,0,0,0.6); }
+.select-indicator { position: absolute; top: 6px; right: 6px; width: 18px; height: 18px; border-radius: 50%; border: 2px solid rgba(255,255,255,0.6); background: rgba(0,0,0,0.3); display: flex; align-items: center; justify-content: center; font-size: 0.65rem; color: transparent; transition: all 0.12s; pointer-events: none; z-index: 2; }
+.mon-card.selected .select-indicator { background: var(--gold); border-color: var(--gold); color: #1a1a2e; }
+.mon-card.selected .select-indicator::after { content: '✓'; font-weight: 700; }
+
+/* PRINT PREVIEW OVERLAY */
+#print-preview-overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.92); z-index: 600; flex-direction: column; align-items: center; }
+#print-preview-overlay.active { display: flex; }
+.print-preview-toolbar { display: flex; align-items: center; gap: 12px; padding: 14px 24px; background: rgba(22,33,62,0.98); border-bottom: 1px solid var(--border); width: 100%; flex-shrink: 0; }
+.print-preview-title { font-family: 'Cinzel', serif; font-size: 0.85rem; font-weight: 700; letter-spacing: 0.1em; color: var(--gold); text-transform: uppercase; flex: 1; }
+.print-preview-scroll { flex: 1; overflow-y: auto; padding: 24px; display: flex; flex-direction: column; align-items: center; gap: 20px; width: 100%; }
+.print-preview-page { background: #fff; width: min(900px, 100%); aspect-ratio: 297/210; display: grid; grid-template-columns: repeat(4, 1fr); grid-template-rows: repeat(2, 1fr); gap: 4px; padding: 10px; box-shadow: 0 4px 24px rgba(0,0,0,0.5); border-radius: 4px; }
+.print-preview-page .mon-card { border-radius: 3px; font-size: 0.52rem; cursor: default; transform: none !important; box-shadow: none !important; }
+.print-preview-page .mon-card:hover { transform: none !important; }
+.print-preview-page .card-header { padding: 4px 6px; }
+.print-preview-page .card-name { font-size: 0.58rem; }
+.print-preview-page .cr-badge { font-size: 0.5rem; }
+.print-preview-page .stat-label { font-size: 0.48rem; }
+.print-preview-page .stat-val { font-size: 0.52rem; }
+.print-preview-page .trait-tag { font-size: 0.42rem; }
+.print-preview-page .ability-line { font-size: 0.48rem; }
+.print-preview-page .card-stats-block { padding: 3px 6px; }
+.print-preview-page .card-traits { padding: 2px 6px 3px; }
+.print-preview-page .select-indicator { display: none; }
 
 @media print {
   * { -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; }
@@ -253,6 +282,7 @@ input[type="text"]::placeholder { color: #6a6a80; }
   .print-page .trait-tag { font-size: 0.44rem !important; }
   .print-page .ability-line { font-size: 0.5rem !important; }
   .print-page .card-stats-block { padding: 4px 7px 3px !important; }
+  .print-page .select-indicator { display: none !important; }
 }
 
 #btn-filter-toggle { display: none; }
@@ -261,7 +291,7 @@ input[type="text"]::placeholder { color: #6a6a80; }
   .header-top { padding: 8px 14px; }
   .app-title { font-size: clamp(0.75rem, 3.5vw, 1.1rem); }
   .app-title span { display: none; }
-  .btn-print { display: none; }
+  .btn-print,.btn-ghost,.selection-badge,.select-indicator { display: none !important; }
   #btn-filter-toggle { display: flex; align-items: center; gap: 4px; font-size: 0.7rem; padding: 4px 10px; background: rgba(201,168,76,0.15); border: 1px solid rgba(201,168,76,0.4); color: var(--gold); border-radius: 6px; cursor: pointer; font-family: 'Cinzel', serif; font-weight: 600; letter-spacing: 0.05em; }
   .filter-bar { max-height: 0; overflow: hidden; transition: max-height 0.3s ease; padding: 0 14px; }
   .filter-bar.expanded { max-height: 500px; padding: 10px 14px 12px; }
@@ -314,7 +344,8 @@ input[type="text"]::placeholder { color: #6a6a80; }
 .nav-item:hover,.nav-item.active{
   color:var(--gold);background:rgba(201,168,76,0.07);border-left-color:var(--gold-dim);
 }
-.nav-item .ni{font-size:1rem;flex-shrink:0;}
+.nav-item .ni{width:1.1rem;height:1.1rem;flex-shrink:0;opacity:0.75;}
+.nav-item:hover .ni,.nav-item.active .ni{opacity:1;}
 .hamburger-btn {
   background:none;border:1px solid var(--border);border-radius:6px;
   padding:7px 10px;cursor:pointer;display:flex;flex-direction:column;
@@ -339,21 +370,24 @@ input[type="text"]::placeholder { color: #6a6a80; }
   </div>
   <div class="nav-scroll">
     <span class="nav-section-label">Home</span>
-    <a href="index.html" class="nav-item"><span class="ni">&#x1F4D6;</span>&nbsp;Hub</a>
+    <a href="index.html" class="nav-item"><span class="ni"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg></span>&nbsp;Hub</a>
     <span class="nav-section-label">Tools</span>
-    <a href="spelltome.html" class="nav-item"><span class="ni">&#x2728;</span>&nbsp;Spell Tome</a>
-    <a href="conditions.html" class="nav-item"><span class="ni">&#x26A0;&#xFE0F;</span>&nbsp;Condition Codex</a>
-    <a href="wildshape.html" class="nav-item"><span class="ni">&#x1F43E;</span>&nbsp;Wildshape &amp; Familiar</a>
-    <a href="monsters.html" class="nav-item active"><span class="ni">&#x1F409;</span>&nbsp;Monster Codex</a>
-    <a href="magic-items.html" class="nav-item"><span class="ni">&#x1F48D;</span>&nbsp;Magic Item Compendium</a>
+    <a href="spelltome.html" class="nav-item"><span class="ni"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"/></svg></span>&nbsp;Spell Tome</a>
+    <a href="conditions.html" class="nav-item"><span class="ni"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg></span>&nbsp;Condition Codex</a>
+    <a href="wildshape.html" class="nav-item"><span class="ni"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M17 8C8 10 5.9 16.17 3.82 19.34L5.71 21l1-1C7.55 18.78 14 16 22 16 22 9 17 8 17 8z"/></svg></span>&nbsp;Wildshape &amp; Familiar</a>
+    <a href="monsters.html" class="nav-item active"><span class="ni"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><circle cx="9" cy="12" r="1"/><circle cx="15" cy="12" r="1"/><path d="M8 20v2h8v-2"/><path d="M12 4C8.14 4 5 7.14 5 11c0 2.38 1.19 4.47 3 5.74V19h8v-2.26c1.81-1.27 3-3.36 3-5.74C19 7.14 15.86 4 12 4z"/></svg></span>&nbsp;Monster Codex</a>
+    <a href="magic-items.html" class="nav-item"><span class="ni"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><polygon points="6 3 18 3 22 9 12 22 2 9"/><polyline points="22 9 12 9 6 3"/><line x1="12" y1="22" x2="12" y2="9"/></svg></span>&nbsp;Magic Item Compendium</a>
   </div>
 </nav>
 
 <div id="app-header">
   <div class="header-top">
     <div class="app-title">Monster Codex <span>D&D 5e Quick Reference</span></div>
-    <div style="display:flex;align-items:center;gap:12px;">
-      <button class="btn btn-print" onclick="printCards()" style="display:none;" id="btn-print-top">Print to PDF</button>
+    <div style="display:flex;align-items:center;gap:8px;">
+      <span class="selection-badge" id="selection-count">0 selected</span>
+      <button class="btn-ghost" id="btn-select-all" onclick="selectAllVisible()" disabled>Select All</button>
+      <button class="btn-ghost" id="btn-clear" onclick="clearSelection()" disabled>Clear</button>
+      <button class="btn btn-print" id="btn-print" onclick="openPrintPreview()" disabled>&#128424; Print to PDF</button>
       <button id="btn-filter-toggle" onclick="toggleFilters()">Filters <span id="toggle-arrow">▼</span></button>
       <button class="hamburger-btn" onclick="openNav()" aria-label="Open navigation"><span></span><span></span><span></span></button>
     </div>
@@ -412,6 +446,14 @@ input[type="text"]::placeholder { color: #6a6a80; }
 </div>
 <div id="modal-overlay" onclick="handleModalClick(event)">
   <div id="modal-box"></div>
+</div>
+<div id="print-preview-overlay">
+  <div class="print-preview-toolbar">
+    <span class="print-preview-title">&#128424; Print Preview</span>
+    <button class="btn btn-print" onclick="executePrint()">Open Print Dialog</button>
+    <button class="btn-ghost" onclick="closePrintPreview()">&#x2715; Close</button>
+  </div>
+  <div class="print-preview-scroll" id="print-preview-scroll"></div>
 </div>
 <div id="print-output"></div>
 
@@ -772,7 +814,7 @@ function filtered() {
   });
 }
 
-function buildCard(m) {
+function buildCard(m, forPreview) {
   const color = TYPE_COLORS[m.type] || '#555';
   const tags = [];
   if (m.legendary) tags.push(`<span class="trait-tag legendary">Legendary</span>`);
@@ -781,8 +823,11 @@ function buildCard(m) {
   if (m.dmgResist?.length) tags.push(`<span class="trait-tag dmg-resist">Resist: ${m.dmgResist.slice(0,2).join(', ')}</span>`);
   if (m.condImmune?.length) tags.push(`<span class="trait-tag cond-immune">Cond. Immune: ${m.condImmune.slice(0,3).join(', ')}</span>`);
   const keyAbility = m.abilities?.[0];
-  return `<div class="mon-card" style="border-color:${color}20">
+  const sel = !forPreview && selectedMonsters.has(m.name) ? ' selected' : '';
+  const indicator = forPreview ? '' : `<div class="select-indicator"></div>`;
+  return `<div class="mon-card${sel}" style="border-color:${color}20">
     <div class="card-header" style="background:${color}">
+      ${indicator}
       <div style="flex:1">
         <div class="card-name">${m.name}</div>
         <span class="card-subtype">${m.size} ${m.type.charAt(0).toUpperCase()+m.type.slice(1)}</span>
@@ -810,7 +855,10 @@ function renderGrid() {
   if (!list.length) { grid.innerHTML = ''; empty.style.display = 'flex'; return; }
   empty.style.display = 'none';
   grid.innerHTML = list.map(m => buildCard(m)).join('');
-  grid.querySelectorAll('.mon-card').forEach((el, i) => el.addEventListener('click', () => openModal(list[i])));
+  grid.querySelectorAll('.mon-card').forEach((el, i) => {
+    el.addEventListener('click', () => toggleSelect(list[i]));
+    el.addEventListener('dblclick', () => openModal(list[i]));
+  });
 }
 
 function openModal(m) {
@@ -871,7 +919,6 @@ function handleModalClick(e) {
   if (e.target === document.getElementById('modal-overlay')) closeModal();
 }
 function closeModal() { document.getElementById('modal-overlay').classList.remove('active'); }
-document.addEventListener('keydown', e => { if (e.key === 'Escape') closeModal(); });
 
 function toggleFilters() {
   const bar = document.getElementById('filter-bar');
@@ -879,21 +926,73 @@ function toggleFilters() {
   document.getElementById('toggle-arrow').textContent = bar.classList.contains('expanded') ? '▲' : '▼';
 }
 
-function printCards() {
-  const list = filtered();
+const selectedMonsters = new Set();
+
+function toggleSelect(m) {
+  if (selectedMonsters.has(m.name)) selectedMonsters.delete(m.name);
+  else selectedMonsters.add(m.name);
+  updateSelectionUI();
+  renderGrid();
+}
+
+function selectAllVisible() {
+  filtered().forEach(m => selectedMonsters.add(m.name));
+  updateSelectionUI();
+  renderGrid();
+}
+
+function clearSelection() {
+  selectedMonsters.clear();
+  updateSelectionUI();
+  renderGrid();
+}
+
+function updateSelectionUI() {
+  const n = selectedMonsters.size;
+  document.getElementById('selection-count').textContent = `${n} selected`;
+  const hasSel = n > 0;
+  document.getElementById('btn-print').disabled = !hasSel;
+  document.getElementById('btn-clear').disabled = !hasSel;
+  document.getElementById('btn-select-all').disabled = filtered().length === 0;
+}
+
+function openPrintPreview() {
+  const list = MONSTERS.filter(m => selectedMonsters.has(m.name));
+  const scroll = document.getElementById('print-preview-scroll');
+  const pages = [];
+  for (let i = 0; i < list.length; i += 8) pages.push(list.slice(i, i + 8));
+  scroll.innerHTML = pages.map(page =>
+    `<div class="print-preview-page">${page.map(m => buildCard(m, true)).join('')}</div>`
+  ).join('');
+  document.getElementById('print-preview-overlay').classList.add('active');
+}
+
+function closePrintPreview() {
+  document.getElementById('print-preview-overlay').classList.remove('active');
+}
+
+function executePrint() {
+  const list = MONSTERS.filter(m => selectedMonsters.has(m.name));
   const output = document.getElementById('print-output');
   const pages = [];
   for (let i = 0; i < list.length; i += 8) pages.push(list.slice(i, i + 8));
-  output.innerHTML = pages.map(page => `<div class="print-page">${page.map(m => buildCard(m)).join('')}</div>`).join('');
+  output.innerHTML = pages.map(page =>
+    `<div class="print-page">${page.map(m => buildCard(m, true)).join('')}</div>`
+  ).join('');
   window.print();
+  setTimeout(() => { output.innerHTML = ''; }, 1500);
 }
+
+document.addEventListener('keydown', e => {
+  if (e.key === 'Escape') { closeModal(); closePrintPreview(); }
+});
 
 document.addEventListener('DOMContentLoaded', () => {
   document.getElementById('cr-min').addEventListener('change', renderGrid);
   document.getElementById('cr-max').addEventListener('change', renderGrid);
-  document.getElementById('btn-print-top').style.display = 'block';
   initPills();
   renderGrid();
+  updateSelectionUI();
 });
 initPills();
 renderGrid();
